[gd_scene load_steps=2 format=3 uid="uid://e8h8mjbjwrvv"]

[ext_resource type="Script" uid="uid://wp6b1hsn2q4c" path="res://UI/note_ui.gd" id="1_ngchy"]

[node name="NoteUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ngchy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 218.0
offset_bottom = 159.0

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 162.0
offset_top = 3.0
offset_right = 210.0
offset_bottom = 34.0
text = "close"

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 158.0
offset_bottom = 38.0

[node name="ContentLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_top = 45.0
offset_right = 214.0
offset_bottom = 153.0
